# docassemble-VTDivorce

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/Divorce/data/questions/: Health_record_civil_union.yml  Health_record_divorce_annulment.yml  divorce.yml  divorce_no_kids.yml  financial_affidavit.yml
docassemble/DivorceNoKids/data/questions/: divorce.yml  divorce_no_kids.yml  financial_affidavit.yml
docassemble/DivorceNoKids/data/sources/: courts_list.xlsx
docassemble/DivorceNoKids/data/templates/: divorce_no_kids_addendum.docx  divorce_no_kids_next_steps.docx  divorce_with_kids_addendum.docx
docassemble/VTDivorce/: language.py
docassemble/VTDivorce/data/questions/: Health_record.yml  Health_record_civil_union.yml  Health_record_divorce_annulment.yml  customized_screens.yml  divorce.yml  divorce_no_kids.yml  financial_affidavit.yml  language.yml
docassemble/VTDivorce/data/sources/: divorce_ar.xlsx  divorce_es.xlsx  divorce_fr.xlsx  divorce_ne.xlsx
docassemble/VTDivorce/data/static/: courts_list.csv
docassemble/VTDivorce/data/templates/: Health_record_civil_union_next_steps.docx  divorce_next_steps.docx  divorce_next_steps_ar.docx  divorce_next_steps_es.docx  divorce_next_steps_fr.docx  divorce_next_steps_ne.docx  divorce_no_kids_addendum.docx  divorce_no_kids_next_steps_ar.docx  divorce_no_kids_next_steps_es.docx  divorce_no_kids_next_steps_fr.docx  divorce_no_kids_next_steps_ne.docx  divorce_with_kids_addendum.docx
