[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VTDivorce"
version = "1.6"
description = "Fill out initial forms to get a divorce, separation or civil union dissolution in Vermont"
readme = "README.md"
authors = [
    { name = "K. Surette", email = "ksurette@legalservicesvt.org" },
]
dependencies = [
    "docassemble.ALToolbox @ git+https://github.com/SuffolkLITLab/docassemble-ALToolbox.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.VTFamilyCourtInfoSheet @ git+https://github.com/LSVermont/docassemble-VTFamilyCourtInfoSheet.git@main",
    "docassemble.VTNoticeOfAppearance @ git+https://github.com/LSVermont/docassemble-VTNoticeOfAppearance.git@main",
    "docassemble.VTSharedYMLFile @ git+https://github.com/LSVermont/docassemble-VTSharedYMLFile.git@main",
]

[project.urls]
Homepage = "legalservicesvt.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
